# MLCore

./: .dockerignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Readme.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker.yml  lint.yml  release.yml  tag.yml
client/: README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx  index.css
client/src/components/ui/: accordion.tsx  breadcrumb.tsx  checkbox.tsx  combobox.tsx  dialog.tsx  hover-card.tsx  menubar.tsx  progress.tsx  scroll-area.tsx  switch.tsx  tabs.tsx  tooltip.tsx
client/src/layout/: Layout.tsx
client/src/lib/: api.ts
client/src/pages/: AuthPage.tsx  DashboardPage.tsx  DatasetsPage.tsx  ModelsPage.tsx  SettingsPage.tsx
client/src/store/: auth.ts
server/: .gitignore  README.md  mlcore_db.db  pyproject.toml  ruff_errors.txt
server/migrations/: env.py
server/migrations/versions/: 0195c3c1f284_init.py  64c86b0767af_add_parent_id_and_version.py  8f821ce38331_initial.py  a1b2c3d4e5f6_add_category_to_files.py  dc4557917e8f_initial_setup.py
server/scripts/server/: cli.py
server/src/: main.py
server/src/common/: logger.py
server/src/common/config/: __init__.py  config.py  settings.py
server/src/common/db/: session.py  tables.py
server/src/common/logging/: logger.py
server/src/common/repository/: base.py
server/src/common/security/: __init__.py  jwt.py  service.py
server/src/common/security/utils/: __init__.py  cookie.py  hash.py  jwt.py
server/src/modules/auth/: __init__.py  router.py  schema.py  service.py
server/src/modules/dataset/: router.py  schema.py  service.py
server/src/modules/dataset/store/: models.py  repository.py
server/src/modules/file/: __init__.py  router.py  schema.py  service.py
server/src/modules/file/store/: __init__.py  model.py  repository.py
server/src/modules/ml_model/: router.py  schema.py  service.py
server/src/modules/ml_model/store/: __init__.py  model.py  repository.py
server/src/modules/ml_model/utils/: hyperparams.py
server/src/modules/stats/: __init__.py  router.py  schema.py  service.py
server/src/modules/stats/store/: __init__.py  repository.py
server/src/modules/user/: __init__.py  router.py  schema.py  service.py
server/src/modules/user/store/: __init__.py  model.py  repository.py
